--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<nav class="navigation">
 				<a class="header-logo" href="./index.html">Web<span class="header-logo-part">Studio</span></a>
 				<ul class="nav-list">
-					<li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+					<li class="nav-item"><a class="nav-link header-current" href="./index.html">Studio</a></li>
 					<li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
 					<li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
 				</ul>
@@ -58,21 +58,41 @@
 				<h2 class="visually-hidden">About us</h2>
 				<ul class="about-list">
 					<li class="about-item">
+						<div class="about-item-svg-wrap">
+							<svg class="about-item-svg" width="64" height="64">
+								<use href="./images/icons.svg#icon-antenna"></use>
+							</svg>
+						</div>
 						<h3 class="about-item-title">Strategy</h3>
 						<p class="about-item-text">Our goal is to identify the business problem to walk away with the perfect and
 							creative solution. </p>
 					</li>
 					<li class="about-item">
+						<div class="about-item-svg-wrap">
+							<svg class="about-item-svg" width="64" height="64">
+								<use href="./images/icons.svg#icon-clock"></use>
+							</svg>
+						</div>
 						<h3 class="about-item-title">Punctuality</h3>
 						<p class="about-item-text">Bring the key message to the brand's audience for the best price within the
 							shortest possible time.</p>
 					</li>
 					<li class="about-item">
+						<div class="about-item-svg-wrap">
+							<svg class="about-item-svg" width="64" height="64">
+								<use href="./images/icons.svg#icon-diagram"></use>
+							</svg>
+						</div>
 						<h3 class="about-item-title">Diligence</h3>
 						<p class="about-item-text">Research and confirm brands that present the strongest digital growth
 							opportunities and minimize risk.</p>
 					</li>
 					<li class="about-item">
+						<div class="about-item-svg-wrap">
+							<svg class="about-item-svg" width="64" height="64">
+								<use href="./images/icons.svg#icon-astronaut"></use>
+							</svg>
+						</div>
 						<h3 class="about-item-title">Technologies</h3>
 						<p class="about-item-text">Design practice focused on digital experiences. We bring forth a deep passion
 							for problem-solving.</p>
@@ -92,6 +112,28 @@
 						<div class="team-text-wrapper">
 							<h3 class="team-item-title">Mark Guerrero</h3>
 							<p class="team-item-text">Product Designer</p>
+							<ul class="team-item-svg-list">
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-instagram"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-twitter"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-facebook"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-linkedin"></use>
+									</svg>
+								</li>
+							</ul>
 						</div>
 					</li>
 					<li class="team-item">
@@ -99,6 +141,28 @@
 						<div class="team-text-wrapper">
 							<h3 class="team-item-title">Tom Ford</h3>
 							<p class="team-item-text">Frontend Developer</p>
+							<ul class="team-item-svg-list">
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-instagram"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-twitter"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-facebook"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-linkedin"></use>
+									</svg>
+								</li>
+							</ul>
 						</div>
 					</li>
 					<li class="team-item">
@@ -106,6 +170,28 @@
 						<div class="team-text-wrapper">
 							<h3 class="team-item-title">Camila Garcia</h3>
 							<p class="team-item-text">Marketing</p>
+							<ul class="team-item-svg-list">
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-instagram"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-twitter"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-facebook"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-linkedin"></use>
+									</svg>
+								</li>
+							</ul>
 						</div>
 					</li>
 					<li class="team-item">
@@ -113,6 +199,28 @@
 						<div class="team-text-wrapper">
 							<h3 class="team-item-title">Daniel Wilson</h3>
 							<p class="team-item-text">UI Designer</p>
+							<ul class="team-item-svg-list">
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-instagram"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-twitter"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-facebook"></use>
+									</svg>
+								</li>
+								<li class="team-item-svg-wrap">
+									<svg class="team-item-svg" width="16" height="16">
+										<use href="./images/icons.svg#icon-linkedin"></use>
+									</svg>
+								</li>
+							</ul>
 						</div>
 					</li>
 				</ul>
@@ -125,42 +233,88 @@
 				<h2 class="portfolio-title">Our Portfolio</h2>
 				<ul class="portfolio-list">
 					<li class="portfolio-item">
-						<img src="./images/portfolio-img-1.jpg" alt="Banking App" width="360" height="300">
+						<div class="portfolio-img-wrap">
+							<img src="./images/portfolio-img-1.jpg" alt="Banking App" width="360" height="300">
+							<p class="portfolio-img-text">
+								14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+								App ·
+								Cloud Storage App
+							</p>
+						</div>
 						<div class="portfolio-text-wrapper">
 							<h3 class="portfolio-item-title">Banking App</h3>
 							<p class="portfolio-item-text">App</p>
 						</div>
 					</li>
+
 					<li class="portfolio-item">
-						<img src="./images/portfolio-img-2.jpg" alt="Cashless Payment" width="360" height="300">
+						<div class="portfolio-img-wrap">
+							<img src="./images/portfolio-img-2.jpg" alt="Cashless Payment" width="360" height="300">
+							<p class="portfolio-img-text">
+								14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+								Cloud Storage App
+							</p>
+						</div>
 						<div class="portfolio-text-wrapper">
 							<h3 class="portfolio-item-title">Cashless Payment</h3>
 							<p class="portfolio-item-text">Marketing</p>
 						</div>
 					</li>
+
 					<li class="portfolio-item">
-						<img src="./images/portfolio-img-3.jpg" alt="Meditation App" width="360" height="300">
+						<div class="portfolio-img-wrap">
+							<img src="./images/portfolio-img-3.jpg" alt="Meditation App" width="360" height="300">
+							<p class="portfolio-img-text">
+								14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+								App ·
+								Cloud Storage App
+							</p>
+						</div>
 						<div class="portfolio-text-wrapper">
 							<h3 class="portfolio-item-title">Meditation App</h3>
 							<p class="portfolio-item-text">App</p>
 						</div>
 					</li>
+
 					<li class="portfolio-item">
-						<img src="./images/portfolio-img-4.jpg" alt="Taxi Service" width="360" height="300">
+						<div class="portfolio-img-wrap">
+							<img src="./images/portfolio-img-4.jpg" alt="Taxi Service" width="360" height="300">
+							<p class="portfolio-img-text">
+								14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+								App ·
+								Cloud Storage App
+							</p>
+						</div>
 						<div class="portfolio-text-wrapper">
 							<h3 class="portfolio-item-title">Taxi Service</h3>
 							<p class="portfolio-item-text">Marketing</p>
 						</div>
 					</li>
+
 					<li class="portfolio-item">
-						<img src="./images/portfolio-img-5.jpg" alt="Screen Illustrations" width="360" height="300">
+						<div class="portfolio-img-wrap">
+							<img src="./images/portfolio-img-5.jpg" alt="Screen Illustrations" width="360" height="300">
+							<p class="portfolio-img-text">
+								14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+								App ·
+								Cloud Storage App
+							</p>
+						</div>
 						<div class="portfolio-text-wrapper">
 							<h3 class="portfolio-item-title">Screen Illustrations</h3>
 							<p class="portfolio-item-text">Design</p>
 						</div>
 					</li>
+
 					<li class="portfolio-item">
-						<img src="./images/portfolio-img-6.jpg" alt="Marketing" width="360" height="300">
+						<div class="portfolio-img-wrap">
+							<img src="./images/portfolio-img-6.jpg" alt="Marketing" width="360" height="300">
+							<p class="portfolio-img-text">
+								14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+								App ·
+								Cloud Storage App
+							</p>
+						</div>
 						<div class="portfolio-text-wrapper">
 							<h3 class="portfolio-item-title">Online Courses</h3>
 							<p class="portfolio-item-text">Marketing</p>
@@ -172,9 +326,37 @@
 	</main>
 
 	<footer class="footer">
-		<div class="container">
-				<a class="footer-logo" href="./index.html">Web<span class="footer-logo-part">Studio</span></a>
-				<p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+		<div class="container footer-container">
+				<div class="footer-prime-wrap">
+					<a class="footer-logo" href="./index.html">Web<span class="footer-logo-part">Studio</span></a>
+					<p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+				</div>
+				<div class="footer-media-wrap">
+					<p class="footer-media-subtitle">Social media</p>
+					<ul class="footer-media-list">
+						<li class="footer-item-svg-wrap">
+							<svg class="footer-item-svg" width="24" height="24">
+								<use href="./images/icons.svg#icon-instagram"></use>
+							</svg>
+						</li>
+						<li class="footer-item-svg-wrap">
+							<svg class="footer-item-svg" width="24" height="24">
+								<use href="./images/icons.svg#icon-twitter"></use>
+							</svg>
+						</li>
+						<li class="footer-item-svg-wrap">
+							<svg class="footer-item-svg" width="24" height="24">
+								<use href="./images/icons.svg#icon-facebook"></use>
+							</svg>
+						</li>
+						<li class="footer-item-svg-wrap">
+							<svg class="footer-item-svg" width="24" height="24">
+								<use href="./images/icons.svg#icon-linkedin"></use>
+							</svg>
+						</li>
+					</ul>
+				</div>
+
 		</div>
 	</footer>
 
