--- a/index.html
+++ b/index.html
@@ -114,24 +114,32 @@
 							<p class="team-item-text">Product Designer</p>
 							<ul class="team-item-svg-list">
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-instagram"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-instagram"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-twitter"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-twitter"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-facebook"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-facebook"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-linkedin"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-linkedin"></use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</div>
@@ -143,24 +151,32 @@
 							<p class="team-item-text">Frontend Developer</p>
 							<ul class="team-item-svg-list">
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-instagram"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-instagram"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-twitter"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-twitter"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-facebook"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-facebook"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-linkedin"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-linkedin"></use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</div>
@@ -172,24 +188,32 @@
 							<p class="team-item-text">Marketing</p>
 							<ul class="team-item-svg-list">
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-instagram"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-instagram"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-twitter"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-twitter"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-facebook"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-facebook"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-linkedin"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-linkedin"></use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</div>
@@ -201,24 +225,32 @@
 							<p class="team-item-text">UI Designer</p>
 							<ul class="team-item-svg-list">
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-instagram"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-instagram"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-twitter"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-twitter"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-facebook"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-facebook"></use>
+										</svg>
+									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<svg class="team-item-svg" width="16" height="16">
-										<use href="./images/icons.svg#icon-linkedin"></use>
-									</svg>
+									<a class="team-item-svg-link">
+										<svg class="team-item-svg" width="16" height="16">
+											<use href="./images/icons.svg#icon-linkedin"></use>
+										</svg>
+									</a>
 								</li>
 							</ul>
 						</div>
@@ -335,24 +367,32 @@
 					<p class="footer-media-subtitle">Social media</p>
 					<ul class="footer-media-list">
 						<li class="footer-item-svg-wrap">
-							<svg class="footer-item-svg" width="24" height="24">
-								<use href="./images/icons.svg#icon-instagram"></use>
-							</svg>
+							<a class="footer-item-svg-link">
+								<svg class="footer-item-svg" width="24" height="24">
+									<use href="./images/icons.svg#icon-instagram"></use>
+								</svg>
+							</a>
 						</li>
 						<li class="footer-item-svg-wrap">
-							<svg class="footer-item-svg" width="24" height="24">
-								<use href="./images/icons.svg#icon-twitter"></use>
-							</svg>
+							<a class="footer-item-svg-link">
+								<svg class="footer-item-svg" width="24" height="24">
+									<use href="./images/icons.svg#icon-twitter"></use>
+								</svg>
+							</a>
 						</li>
 						<li class="footer-item-svg-wrap">
-							<svg class="footer-item-svg" width="24" height="24">
-								<use href="./images/icons.svg#icon-facebook"></use>
-							</svg>
+							<a class="footer-item-svg-link">
+								<svg class="footer-item-svg" width="24" height="24">
+									<use href="./images/icons.svg#icon-facebook"></use>
+								</svg>
+							</a>
 						</li>
 						<li class="footer-item-svg-wrap">
-							<svg class="footer-item-svg" width="24" height="24">
-								<use href="./images/icons.svg#icon-linkedin"></use>
-							</svg>
+							<a class="footer-item-svg-link">
+								<svg class="footer-item-svg" width="24" height="24">
+									<use href="./images/icons.svg#icon-linkedin"></use>
+								</svg>
+							</a>
 						</li>
 					</ul>
 				</div>
