--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<main>
 
 		<!-- Order Service -->
-		<section class="section order-service">
+		<section class="order-service">
 			<div class="container">
 				<h1 class="order-service-title">Effective Solutions for Your Business</h1>
 				<button class="order-service-btn" type="button">Order Service</button>
