--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
 							<p class="team-item-text">Product Designer</p>
 							<ul class="team-item-svg-list">
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-facebook"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-linkedin"></use>
 										</svg>
@@ -151,28 +151,28 @@
 							<p class="team-item-text">Frontend Developer</p>
 							<ul class="team-item-svg-list">
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-facebook"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-linkedin"></use>
 										</svg>
@@ -188,28 +188,28 @@
 							<p class="team-item-text">Marketing</p>
 							<ul class="team-item-svg-list">
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-facebook"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-linkedin"></use>
 										</svg>
@@ -225,28 +225,28 @@
 							<p class="team-item-text">UI Designer</p>
 							<ul class="team-item-svg-list">
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-instagram"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-twitter"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-facebook"></use>
 										</svg>
 									</a>
 								</li>
 								<li class="team-item-svg-wrap">
-									<a class="team-item-svg-link">
+									<a class="team-item-svg-link" href="">
 										<svg class="team-item-svg" width="16" height="16">
 											<use href="./images/icons.svg#icon-linkedin"></use>
 										</svg>
@@ -367,28 +367,28 @@
 					<p class="footer-media-subtitle">Social media</p>
 					<ul class="footer-media-list">
 						<li class="footer-item-svg-wrap">
-							<a class="footer-item-svg-link">
+							<a class="footer-item-svg-link" href="">
 								<svg class="footer-item-svg" width="24" height="24">
 									<use href="./images/icons.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="footer-item-svg-wrap">
-							<a class="footer-item-svg-link">
+							<a class="footer-item-svg-link" href="">
 								<svg class="footer-item-svg" width="24" height="24">
 									<use href="./images/icons.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="footer-item-svg-wrap">
-							<a class="footer-item-svg-link">
+							<a class="footer-item-svg-link" href="">
 								<svg class="footer-item-svg" width="24" height="24">
 									<use href="./images/icons.svg#icon-facebook"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="footer-item-svg-wrap">
-							<a class="footer-item-svg-link">
+							<a class="footer-item-svg-link" href="">
 								<svg class="footer-item-svg" width="24" height="24">
 									<use href="./images/icons.svg#icon-linkedin"></use>
 								</svg>
